<resources>
    <string name="app_name">Asteroids</string>
    <string name="title_activity_testingmenu">testingmenu</string>
    <string name="title_activity_menu">menu</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="button">Button</string>
    <string name="play_as_guest">Play as Guest</string>
    <string name="login">Login</string>
    <string name="register_here">Register here</string>
    <string name="history">History</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_project_credits">ProjectCredits</string>
    <string name="watch_the_history_of_asteroids">Watch the history of Asteroids</string>
    <string name="sound_on_off">Sound On/Off</string>
    <string name="credits">Credits</string>
    <string name="project_members">Project Members</string>
    <string name="register">Register</string>
</resources>
